--- a/style.css
+++ b/style.css
@@ -23,3 +23,11 @@
     float: left;
     background-color: black;
 }
+
+.bl {
+    height: 10px;
+    width: 10px;
+    float: left;
+    background-color: #3D75A7;
+    
+}
